unpackaged/main/default/objects/pcify__Manager__mdt/pcify__Manager__mdt.object-meta.xml
<CustomObject>
    <description>Manage PCIFY settings for all objects with the Manager custom metadata type.</description>
    <label>Manager</label>
    <pluralLabel>Manager</pluralLabel>
</CustomObject>