unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__AuditAction__c.field-meta.xml
<CustomField>
    <fullName>pcify__AuditAction__c</fullName>
    <description>Action to perform when credit card is detected. Update will mask the number. Delete will delete the entire record. Report will generate a PCIFY Log.  Detection supports only Update or Report.</description>
    <inlineHelpText>Action to perform when credit card is detected. Update will mask the number. Delete will delete the entire record. Report will generate a PCIFY Log.  Detection supports only Update or Report.</inlineHelpText>
    <label>AuditAction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
                <default>true</default>
                <label>Update</label>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>