unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__BatchEndDate__c.field-meta.xml
<CustomField>
    <fullName>pcify__BatchEndDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date for the audit to stop finding and masking credit cards</description>
    <inlineHelpText>Date for the audit to stop finding and masking credit cards</inlineHelpText>
    <label>AuditEndDate</label>
    <type>DateTime</type>
</CustomField>