unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__BatchFilterField__c.field-meta.xml
<CustomField>
    <fullName>pcify__BatchFilterField__c</fullName>
    <defaultValue>&quot;CreatedDate&quot;</defaultValue>
    <description>When scheduling an Audit, you need to specify which Date/Time field to query with - i.e. CreatedDate, LastModifiedDate, or another Date/Time field.</description>
    <inlineHelpText>When scheduling an Audit, you need to specify which Date/Time field to query with - i.e. CreatedDate, LastModifiedDate, or another Date/Time field.</inlineHelpText>
    <label>AuditDateField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>