unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__BatchQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>pcify__BatchQueryLimit__c</fullName>
    <defaultValue>50000</defaultValue>
    <description>50 million records is the maximum number of records retrievable by a Database.QueryLocator query</description>
    <inlineHelpText>50 million records is the maximum number of records retrievable by a Database.QueryLocator query</inlineHelpText>
    <label>AuditQueryLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>