unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>pcify__BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of records in each batch. 200 is the default Batch size. 2000 is the maximum.</description>
    <inlineHelpText>Number of records in each batch. 200 is the default Batch size. 2000 is the maximum.</inlineHelpText>
    <label>AuditBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>