unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__BatchStartDate__c.field-meta.xml
<CustomField>
    <fullName>pcify__BatchStartDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date for the audit to start finding and masking records</description>
    <inlineHelpText>Date for the audit to start finding and masking records</inlineHelpText>
    <label>AuditStartDate</label>
    <type>DateTime</type>
</CustomField>