unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__DetectionAction__c.field-meta.xml
<CustomField>
    <fullName>pcify__DetectionAction__c</fullName>
    <defaultValue>&quot;Update&quot;</defaultValue>
    <description>Action to perform when credit card is detected. Update will mask the number. Report will generate a PCIFY Log. Detection supports only Update or Report.</description>
    <inlineHelpText>Action to perform when credit card is detected. Update will mask the number. Report will generate a PCIFY Log. Detection supports only Update or Report.</inlineHelpText>
    <label>DetectionAction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
                <default>true</default>
                <label>Update</label>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>