unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__IsActive__c.field-meta.xml
<CustomField>
    <fullName>pcify__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Activate, you MUST either install the PCIFY Extension Package for this object, or write your own Apex Trigger to call PCIFY Managed Classes.  Please contact PCIFY support for details.</description>
    <inlineHelpText>To Activate, you MUST either install the PCIFY Extension Package for this object, or write your own Apex Trigger to call PCIFY Managed Classes.  Please contact PCIFY support for details.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>