unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__LuhnOnly__c.field-meta.xml
<CustomField>
    <fullName>pcify__LuhnOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox skips all Detection Patterns.  If selected, PCIFY will only find PII that passes the Luhn Algorithm.  USE WITH CAUTION.</description>
    <inlineHelpText>This checkbox skips all Detection Patterns.  If selected, PCIFY will only find PII that passes the Luhn Algorithm.  USE WITH CAUTION.</inlineHelpText>
    <label>LuhnOnly</label>
    <type>Checkbox</type>
</CustomField>