unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__MaskFields__c.field-meta.xml
<CustomField>
    <fullName>pcify__MaskFields__c</fullName>
    <description>Enter a list of comma-delimited TEXT-only field API names.
Example: Description,CustomTextField__c</description>
    <inlineHelpText>Enter a list of comma-delimited TEXT-only field API names.
Example: Description,CustomTextField__c</inlineHelpText>
    <label>DetectionFields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>