unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__MaskType__c.field-meta.xml
<CustomField>
    <fullName>pcify__MaskType__c</fullName>
    <defaultValue>&quot;FullMask&quot;</defaultValue>
    <description>DEPRECATED field - use DetectionPattern.MaskType instead.</description>
    <inlineHelpText>DEPRECATED field - use DetectionPattern.MaskType instead.</inlineHelpText>
    <label>MaskType [DEPRECATED]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FullMask</fullName>
                <default>true</default>
                <label>FullMask</label>
            </value>
            <value>
                <fullName>Last4</fullName>
            </value>
            <value>
                <fullName>First6andLast4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>