unpackaged/main/default/objects/pcify__Manager__mdt/fields/pcify__UseOwnTrigger__c.field-meta.xml
<CustomField>
    <fullName>pcify__UseOwnTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, PCIFY will not execute managed package triggers.  You will need to write your own custom trigger and call PCIFY managed classes.</description>
    <inlineHelpText>If selected, PCIFY will not execute managed package triggers.  You will need to write your own custom trigger and call PCIFY managed classes.</inlineHelpText>
    <label>Use Custom Trigger</label>
    <type>Checkbox</type>
</CustomField>