unpackaged/main/default/objects/pcify__Manager__mdt/validationRules/pcify__End_Date_Must_Be_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>pcify__End_Date_Must_Be_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>pcify__BatchStartDate__c &gt; pcify__BatchEndDate__c</errorConditionFormula>
    <errorMessage>The Audit End Date must be GREATER than the Audit Start Date!</errorMessage>
</ValidationRule>