unpackaged/main/default/objects/pcify__Manager__mdt/validationRules/pcifyfiles__Cannot_Update_Attachments_or_Content.validationRule-meta.xml
<ValidationRule>
    <fullName>pcifyfiles__Cannot_Update_Attachments_or_Content</fullName>
    <active>true</active>
    <description>Update/Masking is not supported for Attachments or Content.</description>
    <errorConditionFormula>(MasterLabel = &#39;Attachment&#39; 
|| MasterLabel = &#39;ContentVersion&#39;)
&amp;&amp; ISPICKVAL(pcify__AuditAction__c, &#39;Update&#39;)</errorConditionFormula>
    <errorDisplayField>pcify__AuditAction__c</errorDisplayField>
    <errorMessage>Update/Masking is not supported for Attachments or Content.</errorMessage>
</ValidationRule>