unpackaged/main/default/objects/pcify__Manager__mdt/listViews/pcify__All_Manager_Settings_2.listView-meta.xml
<ListView>
    <fullName>pcify__All_Manager_Settings_2</fullName>
    <columns>MasterLabel</columns>
    <columns>pcify__IsActive__c</columns>
    <columns>pcify__MaskFields__c</columns>
    <columns>pcify__DetectionAction__c</columns>
    <columns>pcify__AuditAction__c</columns>
    <columns>pcify__BatchStartDate__c</columns>
    <columns>pcify__BatchEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Manager Settings</label>
</ListView>